--- a/sportchemy/layouts/partials/views/sportchemy-card.html
+++ b/sportchemy/layouts/partials/views/sportchemy-card.html
@@ -3,8 +3,8 @@
 {{ $params := $item.Params}}
 
 
-<div class="col-lg-4 sport-match_block">
-  <div class="card text-center">
+<div class="col-lg-4">
+  <div class="card text-center sportchemy-card">
     <div class="card-header">
       {{ time.Format "Mon, 2 Jan | 15:05" $params.date | title }}
     </div>
