--- a/sportchemy/layouts/partials/blocks/sportchemy-collection.html
+++ b/sportchemy/layouts/partials/blocks/sportchemy-collection.html
@@ -76,7 +76,7 @@
 
 {{ $columns := $block.design.columns | default "2" }}
 
-<div class="row col-12 {{if eq $columns "2"}}col-lg-10{{end}}">
+<div class="row col-12 {{if eq $columns "2"}}col-lg-8{{end}} justify-content-center">
 
   {{ with $block.content.text }}{{ . | emojify | markdownify }}{{ end }}
 
