--- a/sportchemy/layouts/partials/views/sportchemy-card.html
+++ b/sportchemy/layouts/partials/views/sportchemy-card.html
@@ -4,13 +4,12 @@
 
 {{ $ncols := .page.design.columns }}
 
-{{ if (eq $ncols "1")}}
-  {{ $container_class := "col-lg-4"}}
-{{ else }}
-  {{ $container_class := "col-lg-6"}}
+{{ $container_class := "col-lg-4"}}
+{{ if (ne $ncols "1")}}
+  {{ $container_class = "col-lg-6"}}
 {{ end }}
 
-<div class="{{printf "%s" $container_class}}">
+<div class="{{ $container_class }}">
   <div class="card text-center sportchemy-card">
     <div class="card-header">
       {{ time.Format "Mon, 2 Jan | 15:05" $params.date | title }}
