add card column size for medium device

--- a/sportchemy/layouts/partials/views/sportchemy-card.html
+++ b/sportchemy/layouts/partials/views/sportchemy-card.html
@@ -9,7 +9,7 @@
   {{ $container_class = "col-lg-6"}}
 {{ end }}
 
-<div class="{{ $container_class }}">
+<div class="{{ $container_class }} col-md-6">
   <div class="card text-center sportchemy-card">
     <div class="card-header">
       {{ time.Format "Mon, 2 Jan | 15:05" $params.date | title }}
