--- a/sportchemy/layouts/partials/views/sportchemy-card.html
+++ b/sportchemy/layouts/partials/views/sportchemy-card.html
@@ -2,42 +2,63 @@
 {{ $link := $item.RelPermalink }}
 {{ $params := $item.Params}}
 
-{{ $ncols := .page.design.columns }}
+{{/* Add class for winning team */}}
 
+{{ $ptHome := $params.score.home | default "" }}
+{{ $ptAway := $params.score.away | default "" }}
+
+{{ $teamHome_class := "" }}
+{{ $teamAway_class := "" }}
+
+{{ if gt $ptHome $ptAway }}
+  {{ $teamHome_class = "team-winner" }}
+{{ else if gt $ptAway $ptHome }}
+  {{ $teamAway_class = "team-winner" }}
+{{ end }}
+
+{{/* Construct gmap link from court address if not present */}}
+{{ $address := $params.details.court.address | default "" }}
+{{ $gmap := $params.details.court.gmap | default "#" }}
+
+{{ if (eq $gmap "#" | and (ne $address "")) }}
+  {{ $gmap = printf "https://maps.google.com?%s" ((querify "q" $address) | safeURL) }}
+{{ end }}
+
+{{/* Column type based on 1/2 columns layout */}}
 {{ $container_class := "col-lg-4"}}
-{{ if (ne $ncols "1")}}
+{{ if (ne .page.design.columns "1")}}
   {{ $container_class = "col-lg-6"}}
 {{ end }}
 
 <div class="{{ $container_class }} col-md-6">
   <div class="card text-center sportchemy-card">
     <div class="card-header">
-      {{ time.Format "Mon, 2 Jan | 15:05" $params.date | title }}
+      {{ time.Format "Mon, 2 Jan" $params.date | title }}
     </div>
     <div class="row no-gutters align-items-center justify-content-center">
       <div class="col-4 order-first">
-        <img src={{$params.home.img}}><br>
-       <p class="team">{{ $params.home.team }}</p>
+        <img src={{ $params.home.logo }} class="team-logo"><br>
+        <p class="team-name {{ $teamHome_class }}">{{ $params.home.name }}</p>
       </div>
       <div class="col-4 order-last">
-        <img src={{$params.away.img}}><br>
-        <p class="team">{{ $params.away.team }}</p>
+        <img src={{ $params.away.logo }} class="team-logo"><br>
+        <p class="team-name {{ $teamAway_class }}">{{ $params.away.name }}</p>
       </div>
       <div class="col-4 card-body">
         <h3 class="card-title">
-          {{ if (eq $params.home.score "") | or (eq $params.away.score "")}}
-            &nbsp;
+          {{ if (eq $ptHome "") | or (eq $params.score.away "")}}
+            {{ time.Format "15:05" $params.date }}
           {{ else }}
-            {{printf "%v - %v" $params.home.score $params.away.score}}
+            <span class="team-points {{ $teamHome_class }}">{{ $ptHome }}</span> - <span class="team-points {{ $teamAway_class }}">{{ $ptAway }}</span>
           {{ end }}
         </h3>
         <div class="card-subtitle text-muted">
-          {{$params.league}}
+          {{ $params.details.league | title }}
         </div>
       </div>
     </div>
     <div class="card-footer">
-      <a href={{$params.court.url}} target="_blank" class="card-link">{{$params.court.name}}</a>
+      <a href={{ $gmap | default "#" }} target="_blank" class="card-link">{{$params.details.court.name}}</a>
     </div>
   </div>
 </div>
