--- a/sportchemy/layouts/partials/blocks/sportchemy-collection.html
+++ b/sportchemy/layouts/partials/blocks/sportchemy-collection.html
@@ -23,46 +23,53 @@
 {{ $query := site.RegularPages }}
 {{ $archive_page := "" }}
 
-{{/* Filters */}}
+{{/*
+  Filters
+*/}}
 
+{{/* Get only 'match' pages */}}
 {{ $query = where $query "Type" $page_type }}
 {{ $archive_page = site.GetPage "Section" $page_type }}
 
-{{ if $block.content.filters.folders }}
-  {{ $folders := $block.content.filters.folders }}
-  {{ $query = where $query "Section" "in" $folders }}
-  {{/* Init archive page to main folder */}}
-  {{ $main_folder := index $folders 0 }}
-  {{ $archive_page = site.GetPage "Section" $main_folder }}
-{{ end }}
-
-{{ if $block.content.filters.tag }}
-  {{ $archive_page = site.GetPage (printf "tags/%s" (urlize $block.content.filters.tag)) }}
+{{/* Some default filters from Wowchemy collection*/}}
+{{ $filters := $block.content.filters }}
+{{ if $filters.tag }}
+  {{ $archive_page = site.GetPage (printf "tags/%s" (urlize $filters.tag)) }}
   {{ $query = $query | intersect $archive_page.Pages }}
 {{ end }}
-{{ if $block.content.filters.category }}
-  {{ $archive_page = site.GetPage (printf "categories/%s" (urlize $block.content.filters.category)) }}
+{{ if $filters.category }}
+  {{ $archive_page = site.GetPage (printf "categories/%s" (urlize $filters.category)) }}
   {{ $query = $query | intersect $archive_page.Pages }}
 {{ end }}
-{{ if $block.content.filters.publication_type }}
-  {{ $archive_page = site.GetPage (printf "publication_types/%s" $block.content.filters.publication_type) }}
-  {{ $query = $query | intersect $archive_page.Pages }}
-{{ end }}
-{{ if $block.content.filters.author }}
-  {{ $archive_page = site.GetPage (printf "authors/%s" (urlize $block.content.filters.author)) }}
-  {{ $query = $query | intersect $archive_page.Pages }}
-{{ end }}
-{{ if $block.content.filters.featured_only }}
+{{ if $filters.featured_only }}
   {{ $query = where $query "Params.featured" "==" true }}
 {{ end }}
-{{ if $block.content.filters.exclude_featured }}
+{{ if $filters.exclude_featured }}
   {{ $query = where $query "Params.featured" "!=" true }}
 {{ end }}
-{{ if $block.content.filters.exclude_past }}
+{{ if $filters.exclude_past }}
   {{ $query = where $query "Date" ">=" now }}
 {{ end }}
-{{ if $block.content.filters.exclude_future }}
+{{ if $filters.exclude_future }}
   {{ $query = where $query "Date" "<" now }}
+{{ end }}
+{{/* New filters for 'match' */}}
+{{ if $filters.team }}
+  {{ $query_home := where $query "Params.home.name" "in" $filters.team }}
+  {{ $query_away := where $query "Params.away.name" "in" $filters.team }}
+  {{ $query = union $query_home $query_away }}
+{{ end }}
+{{ if $filters.season }}
+  {{ $query = where $query "Params.details.season" "in" $filters.season }}
+{{ end }}
+{{ if $filters.league }}
+  {{ $query = where $query "Params.details.league" "in" $filters.league }}
+{{ end }}
+{{ if $filters.from }}
+  {{ $query = where $query "Date" ">=" (time $filters.from) }}
+{{ end }}
+{{ if $filters.to }}
+  {{ $query = where $query "Date" "<=" (time $filters.to) }}
 {{ end }}
 
 {{ $count := len $query }}
@@ -80,7 +87,7 @@
   {{ $query = first $items_count $query }}
 {{ end }}
 
-{{ $columns := $block.design.columns | default "2" }}
+{{ $columns := $block.design.columns | default "1" }}
 
 <div class="row col-12 {{if eq $columns "2"}}col-lg-8{{end}} justify-content-center">
 
@@ -102,17 +109,7 @@
     {{ end }}
 
     {{/* Localisation */}}
-    {{ $items_type := $archive_page.Type }}
-    {{ $i18n := "" }}
-    {{ if eq $items_type "post" }}
-      {{ $i18n = "more_posts" }}
-    {{ else if eq $items_type "event" }}
-      {{ $i18n = "more_talks" }}
-    {{ else if eq $items_type "publication" }}
-      {{ $i18n = "more_publications" }}
-    {{ else }}
-      {{ $i18n = "more_pages" }}
-    {{ end }}
+    {{ $i18n := "more_match" }}
 
     {{ $archive_text := $block.content.archive.text | default (i18n $i18n) | default "See all" }}
 
