--- a/sportchemy/layouts/partials/views/sportchemy-table-hook.html
+++ b/sportchemy/layouts/partials/views/sportchemy-table-hook.html
@@ -2,7 +2,18 @@
 {{ $block := .block }}
 
 <table class="table table-striped table-hover table-responsive-md sportchemy-table">
-  {{ range $index, $item := $query }}
-    {{ partial "functions/render_view" ( dict "page" $block "item" . "view" $.view "index" $index ) }}
-  {{end}}
+  <thead>
+    <tr>
+      <th>{{ i18n "sportchemy_date"      | default "Date"  }}</th>
+      <th>{{ i18n "sportchemy_team_home" | default "Home"  }}</th>
+      <th>{{ i18n "sportchemy_score"     | default "Score" }}</th>
+      <th>{{ i18n "sportchemy_team_away" | default "Away"  }}</th>
+      <th>{{ i18n "sportchemy_court"     | default "Court" }}</th>
+    </tr>
+  </thead>
+  <tbody>
+    {{ range $index, $item := $query }}
+      {{ partial "functions/render_view" ( dict "page" $block "item" . "view" $.view "index" $index ) }}
+    {{end}}
+  </tbody>
 <table>
