--- a/sportchemy/layouts/partials/views/sportchemy-table-hook.html
+++ b/sportchemy/layouts/partials/views/sportchemy-table-hook.html
@@ -6,7 +6,9 @@
     <tr>
       <th>{{ i18n "sportchemy_date"      | default "Date"  }}</th>
       <th>{{ i18n "sportchemy_team_home" | default "Home"  }}</th>
+      <th></th> <!-- Home Team Logo -->
       <th>{{ i18n "sportchemy_score"     | default "Score" }}</th>
+      <th></th> <!-- Away Team Logo -->
       <th>{{ i18n "sportchemy_team_away" | default "Away"  }}</th>
       <th>{{ i18n "sportchemy_court"     | default "Court" }}</th>
     </tr>
