add block description

--- a/sportchemy/layouts/partials/blocks/sportchemy-collection.html
+++ b/sportchemy/layouts/partials/blocks/sportchemy-collection.html
@@ -5,6 +5,56 @@
     https://github.com/wowchemy/wowchemy-hugo-themes/blob/main/modules/wowchemy/layouts/partials/blocks/collection.html
 */}}
 
+{{/*
+---
+title: My page
+type: landing
+
+sections:
+  - block: sportchemy-collection
+    id:
+    content:
+      title:
+      subtitle:
+      text:
+      # Choose how many matches you would like to display (0 = all pages)
+      count: 6
+      # Filter on criteria
+      filters:
+        # The folders to display content from
+        team:
+          -
+        season:
+          -
+        league:
+          -
+        category:
+        tag:
+        featured_only: false
+        exclude_featured: false
+        exclude_future: false
+        exclude_past: false
+        # you can also filter using a date range from "from" to "to"
+        from:
+        to:
+
+      # Choose how many pages you would like to offset by
+      # Useful if you wish to show the first item in the Featured widget
+      offset: 0
+      # Field to sort by, such as Date or details.match_day
+      sort_by: 'Date'
+      sort_ascending: false
+    design:
+      # Choose a listing view from:
+      # sportchemy-card, sportchemy-table
+      view: sportchemy_card
+      view_params:
+        # additional parameters specific to each view
+      # Choose single or dual column layout
+      columns: '1'
+---
+*/}}
+
 {{/* Initialise */}}
 {{ $page := .wcPage }}
 {{ $block := .wcBlock }}
