--- a/sportchemy/layouts/partials/views/sportchemy-table.html
+++ b/sportchemy/layouts/partials/views/sportchemy-table.html
@@ -25,6 +25,6 @@
     <span class="{{ $matchInfo.classAway }}">{{ $params.away.name }}</span>
   </td>
   <td>
-    <a href={{ $matchInfo.gmap }} target="_blank">{{ $params.details.court.name }}</a>
+    <a href={{ $matchInfo.link }} target="_blank">{{ $params.court.name }}</a>
   </td>
 </tr>
