add more sample matches

--- a/sportchemy/layouts/partials/blocks/sportchemy-collection.html
+++ b/sportchemy/layouts/partials/blocks/sportchemy-collection.html
@@ -44,6 +44,8 @@ sections:
       # Field to sort by, such as Date or details.match_day
       sort_by: 'Date'
       sort_ascending: false
+      archive:
+        enable: true
     design:
       # Choose a listing view from:
       # sportchemy-card, sportchemy-table
