--- a/sportchemy/layouts/partials/blocks/sportchemy-collection.html
+++ b/sportchemy/layouts/partials/blocks/sportchemy-collection.html
@@ -143,7 +143,7 @@ sections:
 
 <div class="col-12 {{if eq $columns "2"}}col-lg-8{{end}}">
 
-  {{ with $block.content.text }}{{ . | emojify | markdownify }}{{ end }}
+  {{ with $block.content.text }}<p>{{ . | emojify | $page.RenderString }}</p>{{ end }}
 
   {{/*
       Allow hooks for custom views.
