--- a/sportchemy/layouts/partials/blocks/sportchemy-collection.html
+++ b/sportchemy/layouts/partials/blocks/sportchemy-collection.html
@@ -28,6 +28,8 @@ sections:
           -
         league:
           -
+        tournament:
+          -
         category:
         tag:
         featured_only: false
@@ -117,6 +119,9 @@ sections:
 {{ if $filters.league }}
   {{ $query = where $query "Params.details.league" "in" $filters.league }}
 {{ end }}
+{{ if $filters.tournament }}
+  {{ $query = where $query "Params.details.tournament" "in" $filters.tournament }}
+{{ end }}
 {{ if $filters.from }}
   {{ $query = where $query "Date" ">=" (time $filters.from) }}
 {{ end }}
@@ -154,10 +159,10 @@ sections:
 
   {{ $view_hook := printf "partials/views/%s-hook.html" $block.design.view }}
   {{ if templates.Exists $view_hook }}
-    {{ partial $view_hook (dict "query" $query "block" $block "view" ($block.design.view | default "sportchemy-card") )}}
+    {{ partial $view_hook (dict "query" $query "block" $block "view" ($block.design.view | default "sportchemy-card-view") )}}
   {{ else }}
     {{ range $index, $item := $query }}
-      {{ partial "functions/render_view" (dict "page" $block "item" . "view" ($block.design.view | default "sportchemy-card") "index" $index) }}
+      {{ partial "functions/render_view" (dict "page" $block "item" . "view" ($block.design.view | default "sportchemy-card-view") "index" $index) }}
     {{end}}
   {{ end }}
 
