add custom scss color file

--- a/sportchemy/assets/scss/blocks/sportchemy.scss
+++ b/sportchemy/assets/scss/blocks/sportchemy.scss
@@ -15,7 +15,7 @@
     }
 
     .card-subtitle {
-        font-size: large;
+        font-size: medium;
     }
 
     .team-logo {
@@ -41,6 +41,10 @@
     .card-footer {
         padding: .1rem .5rem;
         font-size: medium;
+    }
+
+    .card-link {
+        text-decoration: underline;
     }
 }
 
