--- a/sportchemy/layouts/partials/views/sportchemy-card-view.html
+++ b/sportchemy/layouts/partials/views/sportchemy-card-view.html
@@ -33,7 +33,7 @@
             <span class="team-points {{ $matchInfo.classHome }}">{{ $matchInfo.scoreHome }}</span> - <span class="team-points {{ $matchInfo.classAway }}">{{ $matchInfo.scoreAway }}</span>
           {{ end }}
         </h3>
-        <div class="card-subtitle text-muted">
+        <div class="card-subtitle">
           {{ $params.league | title }}
         </div>
       </div>
