add collection block docs

--- a/sportchemy/layouts/partials/blocks/sportchemy-collection.html
+++ b/sportchemy/layouts/partials/blocks/sportchemy-collection.html
@@ -50,8 +50,8 @@ sections:
         enable: true
     design:
       # Choose a listing view from:
-      # sportchemy-card, sportchemy-table
-      view: sportchemy_card
+      # sportchemy-card-view, sportchemy-table-view
+      view: sportchemy-card
       view_params:
         # additional parameters specific to each view
       # Choose single or dual column layout
