--- a/sportchemy/layouts/partials/views/sportchemy-table-view-hook.html
+++ b/sportchemy/layouts/partials/views/sportchemy-table-view-hook.html
@@ -1,7 +1,7 @@
 {{ $query := .query }}
 {{ $block := .block }}
 
-<table class="table table-striped table-hover table-responsive-md sportchemy-table">
+<table class="table sportchemy-table table-striped table-hover table-responsive-md">
   <thead>
     <tr>
       <th>{{ i18n "sportchemy_date"      | default "Date"  }}</th>
