--- a/sportchemy/layouts/shortcodes/sportchemy-gallery.html
+++ b/sportchemy/layouts/shortcodes/sportchemy-gallery.html
@@ -37,13 +37,20 @@
         To have a better results, the advice is to set max-height a bit lower than the resize option.
     id : optional
         Specific id for the table, useful for targetting the specifc table with CSS.
+    fancybox : default "true"
+        Add fancybox css and js. In case of multiple galleries in the same page,
+        you can set it to false to avoid multiple imports.
 */}}
 
 {{/* Add CSS and JS for Fancybox */}}
-{{ $css := site.Data.assets.css }}
-{{ printf "<link rel=\"stylesheet\" href=\"%s\" integrity=\"%s\" crossorigin=\"anonymous\" media=\"print\" onload=\"this.media='all'\">" (printf $css.fancybox.url $css.fancybox.version) $css.fancybox.sri | safeHTML }}
-{{ $js := site.Data.assets.js }}
-{{ printf "<script src=\"%s\" integrity=\"%s\" crossorigin=\"anonymous\" defer></script>" (printf $js.fancybox.url $js.fancybox.version) $js.fancybox.sri | safeHTML }}
+{{ $fancybox := .Get "fancybox" | default "true" }}
+{{ if (eq $fancybox "true") }}
+    {{ $css := site.Data.assets.css }}
+    {{ printf "<link rel=\"stylesheet\" href=\"%s\" integrity=\"%s\" crossorigin=\"anonymous\" media=\"print\" onload=\"this.media='all'\">" (printf $css.fancybox.url $css.fancybox.version) $css.fancybox.sri | safeHTML }}
+    {{ $js := site.Data.assets.js }}
+    {{ printf "<script src=\"%s\" integrity=\"%s\" crossorigin=\"anonymous\" defer></script>" (printf $js.fancybox.url $js.fancybox.version) $js.fancybox.sri | safeHTML }}
+{{ end }}
+
 
 {{/* Get album folder or default to `media/albums/gallery/`. */}}
 {{ $album := (.Get "album") | default "gallery" }}
