fix table not closing

--- a/sportchemy/layouts/partials/views/sportchemy-table-view-hook.html
+++ b/sportchemy/layouts/partials/views/sportchemy-table-view-hook.html
@@ -18,4 +18,4 @@
       {{ partial "functions/render_view" ( dict "page" $block "item" . "view" $.view "index" $index ) }}
     {{end}}
   </tbody>
-<table>
+</table>
